Added some comments for swagger.
